tempfile/indoc/tests/ui/non-lit.stderr
error: argument must be a single string literal
 --> tests/ui/non-lit.rs:4:12
  |
4 |     indoc!(fail);
  |            ^^^^
